Change to site link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     {% endif %}
-                    {% if site.linkedin_username %}
+                    {% if site.xing_username %}
                     <li>
                         <a target="_blank" href="https://www.xing.com/profile/{{ site.xing_username }}">
                             <span class="fa-stack fa-lg">
