--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
                 <div class="site-heading">
-                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+                    <h1>{% if page.title %}{{ page.title }}{% elsif page.title_excl %}{{ page.title_excl }}{% else %}{{ site.title }}{% endif %}</h1>
                     <!--<hr class="small">-->
                     <span class="subheading">{{ page.description }}</span>
                 </div>
@@ -209,6 +209,17 @@ layout: default
                         {% endif %}
                     </div>
                 </section>
+                {% if site.projects %}
+                <!-- Projects -->
+                <hr>
+                <h5>PROJECTS</h5>
+                <ul class="list-inline">
+                    {% for project in site.projects %}
+                        <li><a href="{{ site.url }}{{ project.href }}">{{project.title}} - {{project.description}}</a></li>
+                        <br>
+                    {% endfor %}
+                </ul>
+                {% endif %}
                 <!-- References Blog -->
                 {% if site.references %}
                 <hr>
