--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -156,13 +156,13 @@ layout: default
                 </section>
                 {% endif %}
 
-                <!-- Friends Blog -->
-                {% if site.friends %}
+                <!-- Reference Blog -->
+                {% if site.references %}
                 <hr>
-                <h5>FRIENDS</h5>
+                <h5>References</h5>
                 <ul class="list-inline">
-                    {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+                    {% for reference in site.references %}
+                        <li><a href="{{reference.href}}">{{reference.title}}</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
